--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,17 @@
-<p>
-  Neste departures:
-</p>
 
 <tbody>
-  <tr *ngFor='let departure of departures'>
-    <td>{{departure.routeId}}</td>
-    <td>{{departure.departureTime}}</td>
-  </tr>
-</tbody>
+  <table mat-table [dataSource]="departures" class="mat-elevation-z8">
+    <ng-container matColumnDef="routeId">
+      <th mat-header-cell *matHeaderCellDef> Rute </th>
+      <td mat-cell *matCellDef="let departure"> {{departure.routeId}} </td>
+    </ng-container>
 
+    <ng-container matColumnDef="departureTime">
+      <th mat-header-cell *matHeaderCellDef> Ankomst </th>
+      <td mat-cell *matCellDef="let departure"> {{departure.departureTime}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</tbody>
