--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 
 <tbody>
-  <table mat-table [dataSource]="departures" class="mat-elevation-z8">
+  <table mat-table [dataSource]="departures || ''" class="mat-elevation-z8">
     <ng-container matColumnDef="routeId">
       <th mat-header-cell *matHeaderCellDef> Rute </th>
       <td mat-cell *matCellDef="let departure"> {{departure.routeId}} </td>
@@ -11,7 +11,7 @@
       <td mat-cell *matCellDef="let departure"> {{departure.departureTime}} </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns || ''"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </tbody>
