Adding icons for different types of transport Adding the ability to get type of transport

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,13 @@
-
 <tbody>
   <table mat-table [dataSource]="departures || ''" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="icon">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let departure"> 
+        <img src={{departure.iconPath}} class="icon"/> 
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="routeId">
       <th mat-header-cell *matHeaderCellDef> Rute </th>
       <td mat-cell *matCellDef="let departure"> {{departure.routeId}} </td>
